# swiss_army_knife

echo_server/: tcp_echo_server.py
glib/: CMakeLists.txt  FindGlib.cmake  main.c
glib/cmake/: FindGLIB.cmake
glib/misc/: CMakeLists.txt  print_func_name.c  utils.c
glib/sock5/: main.cc
glib/tcp_client/: CMakeLists.txt  client.c
glib/tcp_server/: CMakeLists.txt  server.c
glib/ucontext/: CMakeLists.txt  continuation.c  continuation.h  coroutine.h  coroutine_test.c  coroutine_ucontext.c  ucontext_test.c
libevent/: CMakeLists.txt  server1.cc
python/echo_client_test/: client.py  twisted_echo_client.py
python/echo_server/: packet_test_server.py  scannertest.py  tcp_echo_server.py  twisted_echo_server.py
python/tcp_client/: packet_test_client.py  tcp_client.py  twisted_echo_client.py
tcp_client/: tcp_client.py
tools/: do_rename.py
